src/test/deca/syntax/invalid/obtained_res/lonelyElsesynt.res
./src/test/deca/syntax/invalid/created/ifThenElse/lonelyElse.deca:9:4: mismatched input 'else' expecting {'}', '(', ';', 'new', 'this', 'return', 'println', 'print', 'printlnx', 'printx', 'readFloat', 'readInt', 'if', 'while', 'null', 'true', 'false', '-', '!', IDENT, INT, FLOAT, STRING}
